# zkos

./: .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: rust.yml
methods/: Cargo.toml
methods/guest/: Cargo.toml
miden/air/: Cargo.toml
miden/air/src/: lib.rs  options.rs
miden/core/: Cargo.toml
miden/processor/: Cargo.toml
miden/prover/: Cargo.toml
miden/verifier/: Cargo.toml
recursive/: Cargo.toml
recursive/methods/: build.rs
recursive/methods/guest/: Cargo.toml
recursive/starter/: Cargo.toml
recursive/starter/src/: fib_winter.rs  fibonacci.rs  main.rs  sig.rs
recursive/utils/: Cargo.toml
recursive/utils/src/: inputs.rs  lib.rs
recursive/utils/src/fib/: example.rs  fib_air.rs  fib_prover.rs
recursive/zkprunner/src/: examples.rs  fib_winter.rs  main.rs
starter/: Cargo.toml
starter/src/: fibonacci.rs  main.rs
winterfell/air/: Cargo.toml
winterfell/air/src/: options.rs
winterfell/air/src/air/: trace_info.rs
winterfell/air/src/air/transition/: frame.rs
winterfell/air/src/proof/: queries.rs  table.rs
winterfell/crypto/: Cargo.toml
winterfell/crypto/src/: lib.rs
winterfell/crypto/src/hash/: mod.rs
winterfell/crypto/src/hash/blake/: mod.rs
winterfell/crypto/src/hash/rescue/rp64_256/: digest.rs
winterfell/crypto/src/hash/sha2/: mod.rs
winterfell/crypto/src/merkle/: proofs.rs
winterfell/examples/src/fibonacci/fib2/: mod.rs
winterfell/fri/: Cargo.toml
winterfell/fri/src/verifier/: mod.rs
winterfell/math/: Cargo.toml
winterfell/math/src/: lib.rs
winterfell/math/src/field/: mod.rs  traits.rs
winterfell/math/src/field/extensions/: cubic.rs  quadratic.rs
winterfell/math/src/field/f128/: mod.rs
winterfell/math/src/field/f62/: mod.rs
winterfell/math/src/field/f64/: mod.rs  tests.rs
winterfell/math/src/field/f64_risc0/: mod.rs
winterfell/prover/src/: lib.rs
winterfell/verifier/: Cargo.toml
winterfell/verifier/src/: channel.rs  lib.rs
zkos/: Cargo.toml
zkos/methods/: Cargo.toml
zkos/utils/: Cargo.toml
zkos/utils/src/: inputs.rs  lib.rs
zkos/utils/src/fib/: example.rs  fib_air.rs  fib_prover.rs  mod.rs
zkos/zkprunner/: Cargo.toml
zkos/zkprunner/src/: fib_winter.rs  main.rs
