[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = "0.11.0-rc.4"
serde = "1.0"
miden = {path = "../../miden/miden"}
miden-core = { path = "../../miden/core" }
winter-air = { package = "winter-air", version = "0.4", default-features = false, path = "../../winterfell/air"  }
rkyv = {path = "../../rkyv/rkyv"}
sha3 = "0.10.2"
hex = "0.4.3"