[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { path = "../../../risc0/risc0/zkvm/sdk/rust/build" }

[dependencies]
risc0-zkvm-guest = { path = "../../../risc0/risc0/zkvm/sdk/rust/guest" }
winter-air = { package = "winter-air", version = "0.4", default-features = false, git = "https://github.com/cpunkzzz/winterfell.git", rev = "638822a1eaee12720e8b32f12f0bc834e1355fd9"  }
serde = "1.0"
rkyv = {path = "../../../rkyv/rkyv"}
