[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { path = "../../../risc0/risc0/zkvm/sdk/rust/build" }

[dependencies]
risc0-zkvm-guest = { path = "../../../risc0/risc0/zkvm/sdk/rust/guest" }
winter-air = { package = "winter-air", version = "0.4", default-features = false, path = "../../../winterfell/air"  }
winter-utils = {path = "../../../winterfell/utils/core"}
serde = "1.0"
rkyv = {path = "../../../rkyv/rkyv"}
sha3 = "0.10.2"
hex = "0.4.3"
