[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { git = "https://github.com/cpunkzzz/risc0.git", rev = "af41b453130239656ade36d69d3fe1c3e56ef1e7" }
miden = { path = "../../miden/miden"}
miden-core = { path = "../../miden/core"}
miden-air = { path = "../../miden/air"}
winter-air = { default-features = false, path = "../../winterfell/air"  }
winter-crypto = { default-features = false, path = "../../winterfell/crypto"  }
winter-verifier = { default-features = false, path = "../../winterfell/verifier"  }
winter-math = { default-features = false, path = "../../winterfell/math"  }
utils = {path = "../utils"}
rkyv = { git = "https://github.com/cpunkzzz/rkyv.git", rev = "d7a21338e6444b5b2ab8a3b7d48624eae229258c" }
sha3 = "0.10.2"
hex = "0.4.3"
anyhow = "1.0.62"