[package]
name = "starter"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { path = "../../risc0/risc0/zkvm/sdk/rust" }
miden = { path = "../../miden/miden"}
miden-core = { path = "../../miden/core"}
miden-air = { path = "../../miden/air"}
winter-air = { default-features = false, path = "../../winterfell/air"  }
winter-crypto = { default-features = false, path = "../../winterfell/crypto"  }
winter-verifier = { path = "../../winterfell/verifier"  }
winter-math = { default-features = false, path = "../../winterfell/math", features = ["std", "generate-hints"] }
utils = {path = "../utils"}
rkyv = { git = "https://github.com/cpunkzzz/rkyv.git", rev = "b1cac53b9bbc16b8afa878dfa71d9a7d16cae1dc" }
sha2 = "0.10.2"
sha3 = "0.10.2"
hex = "0.4.3"
anyhow = "1.0.62"