[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = { git = "https://github.com/cpunkzzz/rkyv.git", rev = "d7a21338e6444b5b2ab8a3b7d48624eae229258c" }
winter-air = { default-features = false, path = "../../winterfell/air"  }
miden-air = { path = "../../miden/air"}
serde = "1.0.144"