[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = { git = "https://github.com/cpunkzzz/rkyv.git", rev = "b1cac53b9bbc16b8afa878dfa71d9a7d16cae1dc" }
winter-air = { default-features = false, path = "../../winterfell/air" }
winter-math = { default-features = false, path = "../../winterfell/math" }
winter-verifier = { default-features = false, path = "../../winterfell/verifier"  }
winter-prover = { default-features = false, path = "../../winterfell/prover"  }
miden-air = { path = "../../miden/air"}
serde = "1.0.144"