[package]
name = "winter-crypto"
version = "0.4.0"
description = "Cryptographic library for the Winterfell STARK prover/verifier"
authors = ["winterfell contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novifinancial/winterfell"
documentation = "https://docs.rs/winter-crypto/0.4.0"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "merkle-tree", "hash"]
edition = "2021"
rust-version = "1.60"

[lib]
bench = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "merkle"
harness = false
required-features = ["concurrent"]

[features]
default = ["std"]
concurrent = ["utils/concurrent", "std"]
std = ["blake3/std", "math/std", "sha3/std", "utils/std"]

[dependencies]
blake3 = { version = "1.0", default-features = false }
math = { version = "0.4", path = "../math", package = "winter-math", default-features = false }
sha2-external = { version = "0.10", default-features = false, package = "sha2" }
sha3 = { version = "0.10", default-features = false }
utils = { version = "0.4", path = "../utils/core", package = "winter-utils", default-features = false }
rkyv = { git = "https://github.com/cpunkzzz/rkyv.git", rev = "b1cac53b9bbc16b8afa878dfa71d9a7d16cae1dc" }
serde = "1.0.144"

[dev-dependencies]
criterion = "0.3"
proptest = "1.0"
rand-utils = { version = "0.4", path = "../utils/rand", package = "winter-rand-utils" }
