[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { path = "../../../risc0/risc0/zkvm/sdk/rust/build" }

[dependencies]
anyhow = "1.0.62"
risc0-zkvm-guest =  { path = "../../../risc0/risc0/zkvm/sdk/rust/guest" }
winter-air = { package = "winter-air", version = "0.4", default-features = false, path = "../../../winterfell/air"  }
miden-air = { path = "../../../miden/air"}
winter-utils = { package = "winter-utils", version = "0.4", default-features = false, path = "../../../winterfell/utils/core"  }
winter-crypto = { default-features = false, path = "../../../winterfell/crypto" }
winter-math = { default-features = false, path = "../../../winterfell/math" }
serde = "1.0"
rkyv = { git = "https://github.com/cpunkzzz/rkyv.git", rev = "d7a21338e6444b5b2ab8a3b7d48624eae229258c" }
utils = { path = "../../utils" }
sha3 = "0.10.2"
hex = "0.4.3"
